--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,13 @@ services:
     depends_on:
       - influxdb
 
+  web:
+      build: ./webapp
+      ports:
+        - "5000:5000"
+      depends_on:
+        - influxdb
+
 volumes:
   influxdb-data:
   grafana-data:
